変更し た内容をメモ

--- a/index.html
+++ b/index.html
@@ -122,26 +122,30 @@
                             <p>新宿眼科画廊 特設ページ</p>
                         </div>
                     </div>
-                      <div class="pc">
+                    <div class="pc">
                         <div class="r6">
                             <a href="https://www.gankagarou.com/202003omoidenohakaba">https://www.gankagarou.com/202003omoidenohakaba</a>
                         </div>
                     </div>
                 </div>
-                <div class="rellax" data-rellax-speed="-3"><img src="img/siote.png" width="200px"></div>
+                <div class="rellax1"> <div class="rellax" data-rellax-speed="-2"><img src="img/hone_para.PNG" width="550px"></div></div>
+               <div class="rellax2"> <div class="rellax" data-rellax-speed="-1"><img src="img/siote.png" width="300px"></div></div>
 
             </div>
         </div>
     </div>
     <div id="access">
+        <div class="tizu">
         <h1>:ACCESS</h1>
-        <div class="rellax" data-rellax-speed="-1"><img src="img/hone_para.PNG" width="200px"></div>
+       
         <div class="ac1">
             <p>新宿眼科画廊</p>
         </div>
         <div class="ac2">
-            <p>〒160-0022 東京都新宿区新宿 5-18-11<br>03-5285-8822 ¦ info@gankagarou.com</p>
+            <p>〒160-0022 東京都新宿区新宿 5-18-11<br>03-5285-8822 / info@gankagarou.com</p>
         </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.2795019869777!2d139.70407131525914!3d35.69473898019121!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188cd94d99cab9%3A0xe58d9699e567a6f9!2z5paw5a6_55y856eR55S75buK!5e0!3m2!1sja!2sjp!4v1583316782589!5m2!1sja!2sjp" width="900" height="600" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    </div>
     </div>
     <style>
         @import url("https://fonts.googleapis.com/css?family=Amatic+SC:400,700");
