--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@
     </div>
 
     <div id="menber">
-
+    <div class="tatem">
+<p>omoidenohakabaten</p>
+        </div>
         <h1>:MENBER</h1>
         <div class="iei_box">
             <div class="iei">
@@ -312,6 +314,10 @@
         </div>
     </div>
     <div id="access">
+        <div class="tatea">
+<p>
+the graveyard of memories</p>
+        </div>
         <div class="tizu">
             <h1>:ACCESS</h1>
 
@@ -321,7 +327,7 @@
             <div class="ac2">
                 <p>〒160-0022 東京都新宿区新宿 5-18-11<br>03-5285-8822 / info@gankagarou.com</p>
             </div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.2795019869777!2d139.70407131525914!3d35.69473898019121!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188cd94d99cab9%3A0xe58d9699e567a6f9!2z5paw5a6_55y856eR55S75buK!5e0!3m2!1sja!2sjp!4v1583316782589!5m2!1sja!2sjp" width="900" height="600" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.2795019869777!2d139.70407131525914!3d35.69473898019121!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188cd94d99cab9%3A0xe58d9699e567a6f9!2z5paw5a6_55y856eR55S75buK!5e0!3m2!1sja!2sjp!4v1583316782589!5m2!1sja!2sjp" width="700" height="600" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
     </div>
     
