--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
  <div id="loader-bg">
     <div id="loading">
-        <img src="img/siosio.png" width="300px">
+        <img src="img/Scene1.gif" width="300px">
     </div>
   </div>
 
@@ -203,7 +203,7 @@
                         <a class="b-close">x</a>
                        <img src="./img/ieimutsu.png" alt="rrr" class="muchiicon" width="90px">
                         <p>杉下睦美</p>
-                        <p><img src="./img/Unknown.png" alt="rrr" class="icon"width="30px"> <a span href="https://www.instagram.com/omoidenohakaba/?hl=ja">omoidenohakaba</a></p> 
+                        <p><img src="./img/Unknown.png" alt="rrr" class="icon"width="30px"> <a span href="https://www.instagram.com/mutsumutsu___muchacha/?hl=ja">mutsumutsu___muchacha</a></p> 
                         <img src="./img/IMG_5920.JPG" alt="rrr" class="muchi1"width="350px">
                    <img src="./img/IMG_5919.JPG" alt="rrr" class="muchi1"width="350px">
                         <img src="./img/IMG_5921.JPG" alt="rrr" class="muchi1"width="350px">
@@ -219,7 +219,7 @@
                       <a class="b-close">x</a>
                       <img src="./img/ieiniki.png" alt="" class="muchiicon" width="90px">
                        <p>川本仁紀</p>
-                        <p><img src="./img/Unknown.png" alt="" class="icon"width="30px"> <a span href="https://www.instagram.com/omoidenohakaba/?hl=ja">omoidenohakaba</a></p> 
+                        <p><img src="./img/Unknown.png" alt="" class="icon"width="30px"> <a span href="https://www.instagram.com/made_by_niki_/?hl=ja">made_by_niki_</a></p> 
                         <img src="./img/IMG_5910.JPG" alt="rrr" class="muchi1"width="350px">
                    <img src="./img/IMG_5909.JPG" alt="rrr" class="muchi1"width="350px">
                         <img src="./img/IMG_5911.JPG" alt="rrr" class="muchi1"width="350px">
@@ -238,7 +238,7 @@
                         <a class="b-close">x</a>
                        <img src="./img/ieirara.png" alt="" class="muchiicon" width="90px">
                        <p>島田樂樂</p>
-                        <p><img src="./img/Unknown.png" alt="" class="icon"width="30px"> <a span href="https://www.instagram.com/omoidenohakaba/?hl=ja">omoidenohakaba</a></p> 
+                        <p><img src="./img/Unknown.png" alt="" class="icon"width="30px"> <a span href="https://www.instagram.com/_.la.r_/?hl=ja">_.la.r_</a></p> 
                         <img src="./img/rara1.jpg" alt="rrr" class="muchi1"width="350px">
                    <img src="./img/rara2.png" alt="rrr" class="muchi1"width="350px">
                         <img src="./img/rara3.png" alt="rrr" class="muchi1"width="350px">
@@ -254,9 +254,9 @@
                     <!-- Element to pop up -->
                     <div class="element_to_pop_up4">
                          <a class="b-close">x</a>
-                       <img src="./img/ieirara.png" alt="" class="muchiicon" width="90px">
+                       <img src="./img/ieihana.png" alt="" class="muchiicon" width="90px">
                        <p>久保田伶奈</p>
-                        <p><img src="./img/Unknown.png" alt="" class="icon"width="30px"> <a span href="https://www.instagram.com/omoidenohakaba/?hl=ja">omoidenohakaba</a></p> 
+                        <p><img src="./img/Unknown.png" alt="" class="icon"width="30px"> <a span href="https://www.instagram.com/_kumachabin_/?hl=ja">_kumachabin_</a></p> 
                         <img src="./img/IMG_5914.JPG" alt="rrr" class="muchi1"width="350px">
                    <img src="./img/IMG_5915.JPG" alt="rrr" class="muchi1"width="350px">
                         <img src="./img/IMG_5916.JPG" alt="rrr" class="muchi1"width="350px">
@@ -273,9 +273,9 @@
                     <!-- Element to pop up -->
                     <div class="element_to_pop_up5">
                       <a class="b-close">x</a>
-                       <img src="./img/ieirara.png" alt="" class="muchiicon" width="90px">
+                       <img src="./img/ieireina.png" alt="" class="muchiicon" width="90px">
                        <p>大嶋はな</p>
-                        <p><img src="./img/Unknown.png" alt="" class="icon"width="30px"> <a span href="https://www.instagram.com/omoidenohakaba/?hl=ja">omoidenohakaba</a></p> 
+                        <p><img src="./img/Unknown.png" alt="" class="icon"width="30px"> <a span href="https://www.instagram.com/h_____aapo/?hl=ja">h_____aapo</a></p> 
                         <img src="./img/IMG_5917.JPG" alt="rrr" class="muchi1"width="350px">
                    <img src="./img/IMG_5918.JPG" alt="rrr" class="muchi1"width="350px">
                         
@@ -290,9 +290,9 @@
                     <!-- Element to pop up -->
                     <div class="element_to_pop_up6">
                       <a class="b-close">x</a>
-                       <img src="./img/ieirara.png" alt="" class="muchiicon" width="90px">
+                       <img src="./img/ieiaruga.png" alt="" class="muchiicon" width="90px">
                        <p>有賀楓夏</p>
-                        <p><img src="./img/Unknown.png" alt="" class="icon"width="30px"> <a span href="https://www.instagram.com/omoidenohakaba/?hl=ja">omoidenohakaba</a></p> 
+                        <p><img src="./img/Unknown.png" alt="" class="icon"width="30px"> <a span href="https://www.instagram.com/tbttmy_/?hl=ja">tbttmy_</a></p> 
                         <img src="./img/IMG_5908.JPG" alt="rrr" class="muchi1"width="350px">
                    <img src="./img/IMG_5907.JPG" alt="rrr" class="muchi1"width="350px">
                       
