--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <!-- Element to pop up -->
                     <div class="element_to_pop_up4">
                          <a class="b-close">x</a>
-                       <img src="./img/ieihana.png" alt="" class="muchiicon" width="90px">
+                       <img src="./img/ieireina.png" alt="" class="muchiicon" width="90px">
                        <p>久保田伶奈</p>
                         <p><img src="./img/Unknown.png" alt="" class="icon"width="30px"> <a span href="https://www.instagram.com/_kumachabin_/?hl=ja">_kumachabin_</a></p> 
                         <img src="./img/IMG_5914.JPG" alt="rrr" class="muchi1"width="350px">
@@ -273,7 +273,7 @@
                     <!-- Element to pop up -->
                     <div class="element_to_pop_up5">
                       <a class="b-close">x</a>
-                       <img src="./img/ieireina.png" alt="" class="muchiicon" width="90px">
+                       <img src="./img/ieihana.png" alt="" class="muchiicon" width="90px">
                        <p>大嶋はな</p>
                         <p><img src="./img/Unknown.png" alt="" class="icon"width="30px"> <a span href="https://www.instagram.com/h_____aapo/?hl=ja">h_____aapo</a></p> 
                         <img src="./img/IMG_5917.JPG" alt="rrr" class="muchi1"width="350px">
@@ -389,7 +389,7 @@
 
 <footer>
 
-<p><small>&copy;2020 omoidenoakaba</small></p>
+<p><small>&copy;2020 omoidenohakaba</small></p>
 </footer>
 
 
