--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <ul>
                 <li>
-                    <div id="ham-menu1"><a href="#menber">menber</a></div>
+                    <div id="ham-menu1"><a href="#menber">member</a></div>
                 </li>
                 <li>
                     <div id="ham-menu2"><a href="#about">about</a></div>
@@ -86,7 +86,7 @@
             <div class="menu">
                 <nav>
                     <ul>
-                        <li><a href="#menber">MENBER</a></li>
+                        <li><a href="#menber">MEMBER</a></li>
                         <li><a href="#about">ABOUT</a></li>
                         <li><a href="#access">ACCESS</a></li>
                     </ul>
@@ -389,7 +389,7 @@
 
 <footer>
 
-<p><small>&copy;2020 omoidenohakaba</small></p>
+<p><small>&copy;2020 omoidenoakaba</small></p>
 </footer>
 
 
