--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <p>omoidenohakabaten</p>
         </div>
         
-        <h1>:MENBER</h1>
+        <h1>:MEMBER</h1>
         <div class="iei_box">
             <div class="iei">
 
@@ -389,7 +389,7 @@
 
 <footer>
 
-<p><small>&copy;2020 omoidenoakaba</small></p>
+<p><small>&copy;2020 omoidenohakaba</small></p>
 </footer>
 
 
